# gm-subsonic

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  compose.prod.yaml  compose.yaml  docker-entrypoint.sh  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: container.yml
apps/server/: CLAUDE.md  package.json  project.json  tsconfig.json
apps/server/src/: config.ts  library.ts  main.ts  settings.ts  stream.ts
apps/server/src/http/: routes.ts  serve-file.ts
apps/server/src/http/subsonic/: catalog.ts  errors.ts  index.ts  nodes.ts  respond.ts  types.ts
apps/server/src/http/subsonic/verbs/: albums.ts  artists.ts  favorites.ts  media.ts  system.ts
apps/server/src/render/: cache.ts  encode.ts  exec.ts  index.ts
apps/server/src/render/engines/: gdm.ts  libgme.ts  nsftool.ts  types.ts
apps/web/: CLAUDE.md  index.html  package.json  project.json  tsconfig.json  vite.config.ts
apps/web/src/: App.svelte  main.ts  theme.css
apps/web/src/lib/: CenterView.svelte  ChannelMixer.svelte  GameDetail.svelte  Icon.svelte  ImportDialog.svelte  LoopPlayer.ts  NowPlaying.svelte  PlayerBar.svelte  Settings.svelte  Sidebar.svelte  StructureBar.svelte  TrackList.svelte  Waveform.svelte  api.ts  cover.ts  format.ts  player.ts
docs/: etude-gbs-libgme.md
libs/shared/: CLAUDE.md  package.json  project.json
libs/shared/src/: index.ts
media/: meta.json
tools/: detect-loop.mjs  gdm-loop.mjs  gdm-probe.mjs  gen-fixtures.mjs  import-library.mjs  nsf-loop.mjs  nsf-stems.mjs
tools/gdm/: CMakeLists.txt  gdm.cpp  project.json  wav.h
tools/gdm/patches/: libgme-reglog.patch
tools/nsftool/: nsftool.cpp
